# High-performance-chat-server

./: README.md
code-file/: CMakeLists.txt  autobuild.sh
code-file/include/: public.hpp
code-file/include/server/: ChatServer.hpp  ChatService.hpp
code-file/include/server/db/: db.h
code-file/include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
code-file/include/server/redis/: redis.hpp
code-file/src/client/: CMakeLists.txt  ClientMain.cpp
code-file/src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
code-file/src/server/db/: db.cpp
code-file/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
code-file/src/server/redis/: redis.cpp
